Report layout default design done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,23 @@
 <resources>
     <string name="app_name">AS_DeliveryReport</string>
+    <string name="project_name">Amar Shasroy</string>
 
     <string name="main_text">Delivery Report</string>
+
+    <string name="delivery_report_on_behalf_of_text">Raise this request on behalf of</string>
+    <string name="delivery_report_on_behalf_of_input_hint">F R Summit</string>
+    <string name="delivery_report_order_number_text">Order number</string>
+    <string name="delivery_report_order_number_input_hint">0123456</string>
+    <string name="delivery_report_order_by_text">Order by</string>
+    <string name="delivery_report_order_by_input_hint">F R Summit</string>
+    <string name="delivery_report_order_date_text">Order date</string>
+    <string name="delivery_report_order_date_input_hint">21st October, 2020</string>
+    <string name="delivery_report_delivery_date_text">Delivery date</string>
+    <string name="delivery_report_delivery_date_input_hint">21st October, 2020</string>
+    <string name="delivery_report_delivery_to_name_text">Delivery to name</string>
+    <string name="delivery_report_delivery_to_name_input_hint">F R Summit</string>
+    <string name="delivery_report_comment_text">Comment</string>
+    <string name="delivery_report_comment_input_hint">Your comment...</string>
+
+    <string name="delivery_report_submit_btn_text">Save Report</string>
 </resources>
