--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,10 +16,13 @@
     <string name="delivery_report_delivery_date_input_hint">21st October, 2020</string>
     <string name="delivery_report_delivery_to_name_text">Delivery to name</string>
     <string name="delivery_report_delivery_to_name_input_hint">F R Summit</string>
+    <string name="delivery_report_status_text">Status</string>
+    <string name="delivery_report_status_input_hint">Order status</string>
     <string name="delivery_report_comment_text">Comment</string>
     <string name="delivery_report_comment_input_hint">Your comment...</string>
 
     <string name="delivery_report_submit_btn_text">Save Report</string>
+    <string name="delivery_report_cancel_btn_text">Cancel Report</string>
 
     <string name="user_img_upload">Upload photo</string>
     <string name="user_sign_img_upload">Upload signature</string>
